@@ -7,6 +7,8 @@ v0.7.0:
         * Esky.helper_app is now Esky.sudo_proxy and is always an instance
           of esky.sudo.SudoProxy.
         * added Esky.drop_root() method to drop root privileges.
+    * Have Esky.auto_update() call Esky.cleanup() automatically (mostly so it
+      can immediately drop any root privileges it has acquired).
     * Use a separate file "esky-lockfile.txt" for version locking.  This
       will help protect against strange behaviour when fcntl.flock is
       simulated using fcntl.lockf (which released the lock when *any* handle
